chore: Add .env file with ROBOFLOW_API_KEY and update main.ipynb
- Add .env file with ROBOFLOW_API_KEY=gXbklMRhhqXExRxwzDNe
- Update main.ipynb to install python-dotenv and load environment variables

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "Ultralytics YOLOv8.0.196 🚀 Python-3.11.4 torch-2.0.1 CPU (Apple M2)\n",
-      "Setup complete ✅ (8 CPUs, 8.0 GB RAM, 388.9/460.4 GB disk)\n"
+      "Setup complete ✅ (8 CPUs, 8.0 GB RAM, 394.4/460.4 GB disk)\n"
      ]
     }
    ],
@@ -20,6 +20,10 @@
     "\n",
     "%pip install ultralytics==8.0.196\n",
     "%pip install roboflow --quiet\n",
+    "%pip install python-dotenv --quiet\n",
+    "\n",
+    "%load_ext dotenv\n",
+    "%dotenv\n",
     "\n",
     "display.clear_output()\n",
     "ultralytics.checks()"
@@ -27,11 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "from ultralytics import YOLO\n",
+    "from roboflow import Roboflow\n",
     "\n",
     "model = YOLO(\"yolov8n.pt\")"
    ]
