chore: Update .gitignore and main.ipynb
- Update .gitignore to include LaTeX files and paper.md
- Remove paper.md from the repository
- Update main.ipynb to import necessary libraries and handle camera frames with YOLO model

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,44 +2,69 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Ultralytics YOLOv8.0.196 🚀 Python-3.11.4 torch-2.0.1 CPU (Apple M2)\n",
-      "Setup complete ✅ (8 CPUs, 8.0 GB RAM, 394.4/460.4 GB disk)\n"
-     ]
-    }
-   ],
-   "source": [
-    "from IPython import display\n",
-    "import ultralytics\n",
-    "\n",
-    "%pip install ultralytics==8.0.196\n",
-    "%pip install roboflow --quiet\n",
-    "%pip install python-dotenv --quiet\n",
-    "\n",
-    "%load_ext dotenv\n",
-    "%dotenv\n",
-    "\n",
-    "display.clear_output()\n",
-    "ultralytics.checks()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "from ultralytics import YOLO\n",
-    "from roboflow import Roboflow\n",
+    "import cv2\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "model = YOLO(\"yolov10n.pt\")\n",
+    "camera = cv2.VideoCapture(0)\n",
     "\n",
-    "model = YOLO(\"yolov8n.pt\")"
+    "while True:\n",
+    "    success, frame = camera.read()\n",
+    "    if not success:\n",
+    "        print(\"Failed to read frame from camera\")\n",
+    "        break\n",
+    "\n",
+    "    frame = cv2.flip(frame, 1)\n",
+    "    results = model(frame, stream=True, verbose=False)\n",
+    "\n",
+    "    for r in results:\n",
+    "        boxes = r.boxes\n",
+    "\n",
+    "        for box in boxes:\n",
+    "            x1, y1, x2, y2 = box.xyxy[0]\n",
+    "            x1, y1, x2, y2 = int(x1), int(y1), int(x2), int(y2)\n",
+    "\n",
+    "            cv2.rectangle(frame, (x1, y1), (x2, y2), (255, 0, 255), 3)\n",
+    "\n",
+    "            confidence = math.ceil((box.conf[0] * 100)) / 100\n",
+    "\n",
+    "            cv2.putText(\n",
+    "                frame,\n",
+    "                f\"{confidence}%\",\n",
+    "                (x1, y1 - 10),\n",
+    "                cv2.FONT_HERSHEY_SIMPLEX,\n",
+    "                0.5,\n",
+    "                (0, 0, 255),\n",
+    "                2,\n",
+    "            )\n",
+    "\n",
+    "    cv2.imshow(\"frame\", frame)\n",
+    "    if cv2.waitKey(1) & 0xFF == ord(\"q\"):\n",
+    "        break"
    ]
   },
   {
