added frontend to test the model :

--- a/training.ipynb
+++ b/training.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,12 +39,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the YOLOv8 model\n",
-    "model = YOLO(\"yolov8n.pt\")"
+    "# Create a new YOLOv8 model\n",
+    "model = YOLO(\"yolov8n.yaml\")"
    ]
   },
   {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,6 +231,13 @@
     "\n",
     "model.save(\"YOLO_ThreatDetection_v1.0.pt\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
