fixed some stuff

--- a/training.ipynb
+++ b/training.ipynb
@@ -6,18 +6,32 @@
    "source": [
     "# Training the Model\n",
     "\n",
-    "In this notebook, we will train the YOLOv8 object detection model, which is already trained on the COCO dataset containing 330k images and 80 object categories, on additonal objects, particularly harmful/threatening objects.\n",
+    "In this notebook, we will train the YOLOv8 models (any variant YOLOv8n, YOLOv8s, YOLOv8m, YOLOv8l etc.) on the custom dataset that contains 21k annotated images of dangerous objects.\n",
     "\n",
-    "Before starting, make sure to download the dataset: https://universe.roboflow.com/startup-zn0ol/dangerous-objects-dq94u\n",
+    "Before starting, make sure to download this custom dataset from here: https://universe.roboflow.com/startup-zn0ol/dangerous-objects-dq94u\n",
     "\n",
     "> Note: You can use any dataset of your choice, but make sure to update the paths in the code below.\n",
     "\n",
-    "Verify and update the `data.yaml` file with the new classes and paths to the training and validation datasets."
+    "Verify and update the `data.yaml` file with the new classes and paths to the training and validation datasets. Make sure to put the `dangerous-objects` folder in the `datasets/` directory.\n",
+    "\n",
+    "\n",
+    "```yaml\n",
+    "# Dataset paths\n",
+    "train: dangerous-objects/train/images\n",
+    "val: dangerous-objects/valid/images\n",
+    "test: dangerous-objects/test/images\n",
+    "\n",
+    "# Number of classes\n",
+    "nc: 6\n",
+    "\n",
+    "# Class names\n",
+    "names: ['ammo', 'firearm', 'grenade', 'knife', 'pistol', 'rocket']\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +44,10 @@
     "# Imports\n",
     "import os\n",
     "from ultralytics import YOLO\n",
+    "from ultralytics.utils.metrics import ConfusionMatrix\n",
+    "import torch\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "\n",
     "# Optional: Set up Comet.ml to log experiment data\n",
     "from comet_ml import Experiment\n",
@@ -38,45 +56,29 @@
     "          \n",
     "experiment = Experiment(\n",
     "  api_key=os.getenv(\"COMET_API_KEY\"),\n",
-    "  project_name=\"general\",\n",
+    "  project_name=\"enhancing-home-security\",\n",
     "  workspace=\"chiragagg5k\"\n",
     ")\n",
     "\n",
     "## Clear notebook output\n",
-    "clear_output(wait=False)"
+    "clear_output(wait=False)\n",
+    "\n",
+    "print(\"Notebook setup completed.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading https://github.com/ultralytics/assets/releases/download/v8.2.0/yolov8n.pt to 'yolov8n.pt'...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 6.25M/6.25M [00:02<00:00, 2.19MB/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load a pretrained model\n",
-    "model = YOLO(\"yolov8n.pt\") # or yolov8s.pt, yolov8m.pt, yolov8l.pt, yolov8x.pt\n",
+    "model = YOLO(\"yolov8n.yaml\") # or yolov8s.pt, yolov8m.pt, yolov8l.pt, yolov8x.pt\n",
     "\n",
-    "# Freeze layers\n",
-    "for param in model.parameters():\n",
-    "    param.requires_grad = False\n",
-    "\n",
-    "# Unfreeze last few layers\n",
-    "for param in model.model.model[-10:].parameters():\n",
-    "    param.requires_grad = True"
+    "# If cuda is available\n",
+    "if(torch.cuda.is_available()):\n",
+    "    print(\"Using GPU\")\n",
+    "    model = model.to(\"cuda\")"
    ]
   },
   {
@@ -204,57 +206,66 @@
       "File \u001b[0;32m~/.pyenv/versions/3.11.4/lib/python3.11/site-packages/torch/autograd/graph.py:768\u001b[0m, in \u001b[0;36m_engine_run_backward\u001b[0;34m(t_outputs, *args, **kwargs)\u001b[0m\n\u001b[1;32m    766\u001b[0m     unregister_hooks \u001b[38;5;241m=\u001b[39m _register_logging_hooks_on_whole_graph(t_outputs)\n\u001b[1;32m    767\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 768\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mVariable\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execution_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[1;32m    769\u001b[0m \u001b[43m        \u001b[49m\u001b[43mt_outputs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\n\u001b[1;32m    770\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Calls into the C++ engine to run the backward pass\u001b[39;00m\n\u001b[1;32m    771\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    772\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m attach_logging_hooks:\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;38;5;196mCOMET ERROR:\u001b[0m Due to connectivity issues, there's an error in processing the heartbeat. The experiment's status updates might be inaccurate until the connection issues are resolved.\n"
+     ]
     }
    ],
    "source": [
-    "results = model.train(data=\"data.yaml\", epochs=100, imgsz=640, cache=False, verbose=True, plots=True)"
+    "results = model.train(data=\"data.yaml\", epochs=100, imgsz=640, verbose=True, plots=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ultralytics YOLOv8.2.89 🚀 Python-3.11.4 torch-2.4.0 CPU (Apple M2)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mval: \u001b[0mScanning /Users/chiragagg5k/Desktop/Coding_Stuff/Enhancing-Home-Security/datasets/coco8/labels/val.cache... 4 images, 0 backgrounds, 0 corrupt: 100%|██████████| 4/4 [00:00<?, ?it/s]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 1/1 [00:00<00:00,  2.41it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                   all          4         17      0.621      0.833      0.888       0.63\n",
-      "                person          3         10      0.721        0.5      0.519      0.269\n",
-      "                   dog          1          1       0.37          1      0.995      0.597\n",
-      "                 horse          1          2      0.751          1      0.995      0.631\n",
-      "              elephant          1          2      0.505        0.5      0.828      0.394\n",
-      "              umbrella          1          1      0.564          1      0.995      0.995\n",
-      "          potted plant          1          1      0.814          1      0.995      0.895\n",
-      "Speed: 1.3ms preprocess, 91.3ms inference, 0.0ms loss, 2.7ms postprocess per image\n",
-      "Results saved to \u001b[1mruns/detect/val11\u001b[0m\n",
-      "Mean Average Precision (mAP@0.5:0.95):  0.6303199586968667\n"
+      "80\n"
      ]
     }
    ],
    "source": [
     "# Validate the model\n",
     "\n",
-    "metrics = model.val(data=\"data.yaml\", imgsz=640, save_json=True)\n",
+    "metrics = model.val(data=\"data.yaml\", imgsz=640, save_json=True, plots=True)\n",
     "print(\"mAP50-95:\", metrics.box.map)\n",
     "print(\"mAP50:\", metrics.box.map50)\n",
     "print(\"mAP75:\", metrics.box.map75)\n",
-    "print(\"mAPS:\", metrics.box.maps)"
+    "\n",
+    "conf_matrix = ConfusionMatrix(nc=len(model.names))\n",
+    "conf_matrix.process_batch(results.boxes, results.target)\n",
+    "\n",
+    "conf_matrix.plot_confusion_matrix(normalize=True, title=\"Confusion Matrix\")\n",
+    "plt.savefig(\"confusion_matrix.png\")\n",
+    "plt.show()\n",
+    "\n",
+    "tp = conf_matrix.tp\n",
+    "fp = conf_matrix.fp\n",
+    "fn = conf_matrix.fn\n",
+    "tn = conf_matrix.tn\n",
+    "\n",
+    "precision = tp / (tp + fp + 1e-9)\n",
+    "recall = tp / (tp + fn + 1e-9)\n",
+    "avg_precision = np.mean(precision)\n",
+    "avg_recall = np.mean(recall)\n",
+    "print(f\"Average Precision: {avg_precision}\")\n",
+    "print(f\"Average Recall: {avg_recall}\")\n",
+    "\n",
+    "f1_score = 2 * (precision * recall) / (precision + recall + 1e-9)\n",
+    "avg_f1_score = np.mean(f1_score)\n",
+    "print(f\"Average F1 Score: {avg_f1_score}\")\n",
+    "\n",
+    "fpr = fp / (fp + tn + 1e-9)\n",
+    "avg_fpr = np.mean(fpr)\n",
+    "print(f\"Average False Positive Rate: {avg_fpr}\")"
    ]
   },
   {
@@ -263,9 +274,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save the model\n",
+    "# Save the model and exit logger\n",
     "\n",
-    "model.save(\"YOLO_ThreatDetection_v1.0.pt\")"
+    "model.save(\"YOLO_ThreatDetection_v1.0.pt\")\n",
+    "experiment.end()"
    ]
   }
  ],
