chnaged some lines

--- a/training.ipynb
+++ b/training.ipynb
@@ -31,23 +31,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Notebook setup completed.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Config setup\n",
-    "from IPython.display import clear_output\n",
-    "\n",
     "%pip install --upgrade pip\n",
     "%pip install -r requirements.txt\n",
-    "\n",
-    "# Imports\n",
-    "import os\n",
-    "from ultralytics import YOLO\n",
-    "from ultralytics.utils.metrics import ConfusionMatrix\n",
-    "import torch\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "\n",
     "# Optional: Set up Comet.ml to log experiment data\n",
     "from comet_ml import Experiment\n",
@@ -60,7 +57,16 @@
     "  workspace=\"chiragagg5k\"\n",
     ")\n",
     "\n",
+    "# Imports\n",
+    "import os\n",
+    "from ultralytics import YOLO\n",
+    "from ultralytics.utils.metrics import ConfusionMatrix\n",
+    "import torch\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
     "## Clear notebook output\n",
+    "from IPython.display import clear_output\n",
     "clear_output(wait=False)\n",
     "\n",
     "print(\"Notebook setup completed.\")"
