--- a/training.ipynb
+++ b/training.ipynb
@@ -276,9 +276,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m ---------------------------------------------------------------------------------------\n",
+      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m Comet.ml Experiment Summary\n",
+      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m ---------------------------------------------------------------------------------------\n",
+      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m   Data:\n",
+      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     display_summary_level : 1\n",
+      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     name                  : envious_chicken_3994\n",
+      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     url                   : https://www.comet.com/chiragagg5k/enhancing-home-security/af02068495d34f2e93ee98454d6d856b\n",
+      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m   Uploads:\n",
+      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     environment details      : 1\n",
+      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     filename                 : 1\n",
+      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     git metadata             : 1\n",
+      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     git-patch (uncompressed) : 1 (1.20 KB)\n",
+      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     installed packages       : 1\n",
+      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     notebook                 : 1\n",
+      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     source_code              : 1\n",
+      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m \n",
+      "\u001b[1;38;5;214mCOMET WARNING:\u001b[0m To get all data logged automatically, import comet_ml before the following modules: torch.\n"
+     ]
+    }
+   ],
    "source": [
     "# Save the model and exit logger\n",
     "\n",
