--- a/training.ipynb
+++ b/training.ipynb
@@ -74,12 +74,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'YOLO' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Load a pretrained model\u001b[39;00m\n\u001b[1;32m      2\u001b[0m model_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myolov8n\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 3\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mYOLO\u001b[49m(\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodel_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.yaml\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      5\u001b[0m ) \u001b[38;5;66;03m# or yolov8s.pt, yolov8m.pt, yolov8l.pt, yolov8x.pt\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# If cuda is available\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m(torch\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mis_available()):\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'YOLO' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Load a pretrained model\n",
-    "model = YOLO(\"yolov8n.yaml\") # or yolov8s.pt, yolov8m.pt, yolov8l.pt, yolov8x.pt\n",
+    "model_name = \"yolov8n\"\n",
+    "model = YOLO(\n",
+    "    f\"{model_name}.yaml\"\n",
+    ") # or yolov8s.pt, yolov8m.pt, yolov8l.pt, yolov8x.pt\n",
     "\n",
     "# If cuda is available\n",
     "if(torch.cuda.is_available()):\n",
@@ -306,7 +321,8 @@
    "source": [
     "# Save the model and exit logger\n",
     "\n",
-    "model.save(\"YOLO_ThreatDetection_v1.0.pt\")\n",
+    "model.save(f\"models/{model_name}_threat_detection.pt\")\n",
+    "experiment.log_artifact(f\"models/{model_name}_threat_detection.pt\")\n",
     "experiment.end()"
    ]
   }
