added validation notebook

--- a/training.ipynb
+++ b/training.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -46,6 +46,31 @@
     "%pip install --upgrade pip\n",
     "%pip install -r requirements.txt\n",
     "\n",
+    "## Clear notebook output\n",
+    "from IPython.display import clear_output\n",
+    "clear_output(wait=False)\n",
+    "\n",
+    "print(\"Dependencies installed.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imports\n",
+    "from ultralytics import YOLO\n",
+    "import torch\n",
+    "import supervision as sv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Optional: Set up Comet.ml to log experiment data\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
@@ -58,39 +83,14 @@
     "  api_key=os.getenv(\"COMET_API_KEY\"),\n",
     "  project_name=\"enhancing-home-security\",\n",
     "  workspace=\"chiragagg5k\"\n",
-    ")\n",
-    "\n",
-    "# Imports\n",
-    "from ultralytics import YOLO\n",
-    "from ultralytics.utils.metrics import ConfusionMatrix\n",
-    "import torch\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
-    "## Clear notebook output\n",
-    "from IPython.display import clear_output\n",
-    "clear_output(wait=False)\n",
-    "\n",
-    "print(\"Notebook setup completed.\")"
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'YOLO' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Load a pretrained model\u001b[39;00m\n\u001b[1;32m      2\u001b[0m model_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myolov8n\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 3\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mYOLO\u001b[49m(\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodel_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.yaml\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      5\u001b[0m ) \u001b[38;5;66;03m# or yolov8s.pt, yolov8m.pt, yolov8l.pt, yolov8x.pt\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# If cuda is available\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m(torch\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mis_available()):\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'YOLO' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load a pretrained model\n",
     "model_name = \"yolov8n\"\n",
@@ -239,90 +239,9 @@
     }
    ],
    "source": [
-    "results = model.train(data=\"data.yaml\", epochs=100, imgsz=640, verbose=True, plots=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "80\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Validate the model\n",
+    "results = model.train(data=\"data.yaml\", epochs=100, imgsz=640, verbose=True, plots=True)\n",
     "\n",
-    "metrics = model.val(data=\"data.yaml\", imgsz=640, save_json=True, plots=True)\n",
-    "print(\"mAP50-95:\", metrics.box.map)\n",
-    "print(\"mAP50:\", metrics.box.map50)\n",
-    "print(\"mAP75:\", metrics.box.map75)\n",
-    "\n",
-    "conf_matrix = ConfusionMatrix(nc=len(model.names))\n",
-    "conf_matrix.process_batch(results.boxes, results.target)\n",
-    "\n",
-    "conf_matrix.plot_confusion_matrix(normalize=True, title=\"Confusion Matrix\")\n",
-    "plt.savefig(\"confusion_matrix.png\")\n",
-    "plt.show()\n",
-    "\n",
-    "tp = conf_matrix.tp\n",
-    "fp = conf_matrix.fp\n",
-    "fn = conf_matrix.fn\n",
-    "tn = conf_matrix.tn\n",
-    "\n",
-    "precision = tp / (tp + fp + 1e-9)\n",
-    "recall = tp / (tp + fn + 1e-9)\n",
-    "avg_precision = np.mean(precision)\n",
-    "avg_recall = np.mean(recall)\n",
-    "print(f\"Average Precision: {avg_precision}\")\n",
-    "print(f\"Average Recall: {avg_recall}\")\n",
-    "\n",
-    "f1_score = 2 * (precision * recall) / (precision + recall + 1e-9)\n",
-    "avg_f1_score = np.mean(f1_score)\n",
-    "print(f\"Average F1 Score: {avg_f1_score}\")\n",
-    "\n",
-    "fpr = fp / (fp + tn + 1e-9)\n",
-    "avg_fpr = np.mean(fpr)\n",
-    "print(f\"Average False Positive Rate: {avg_fpr}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m ---------------------------------------------------------------------------------------\n",
-      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m Comet.ml Experiment Summary\n",
-      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m ---------------------------------------------------------------------------------------\n",
-      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m   Data:\n",
-      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     display_summary_level : 1\n",
-      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     name                  : envious_chicken_3994\n",
-      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     url                   : https://www.comet.com/chiragagg5k/enhancing-home-security/af02068495d34f2e93ee98454d6d856b\n",
-      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m   Uploads:\n",
-      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     environment details      : 1\n",
-      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     filename                 : 1\n",
-      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     git metadata             : 1\n",
-      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     git-patch (uncompressed) : 1 (1.20 KB)\n",
-      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     installed packages       : 1\n",
-      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     notebook                 : 1\n",
-      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     source_code              : 1\n",
-      "\u001b[1;38;5;39mCOMET INFO:\u001b[0m \n",
-      "\u001b[1;38;5;214mCOMET WARNING:\u001b[0m To get all data logged automatically, import comet_ml before the following modules: torch.\n"
-     ]
-    }
-   ],
-   "source": [
     "# Save the model and exit logger\n",
-    "\n",
     "model.save(f\"models/{model_name}_threat_detection.pt\")\n",
     "experiment.log_artifact(f\"models/{model_name}_threat_detection.pt\")\n",
     "experiment.end()"
