Add .gitignore entries for datasets and training.py script

--- a/validating.ipynb
+++ b/validating.ipynb
@@ -1,38 +1,49 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Validating The Model\n",
+    "\n",
+    "This notebook contains code to validate the model that you trained using the `training.ipynb` notebook."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting evaluation...\n",
-      "Processed 100/1749 images\n",
-      "Processed 200/1749 images\n",
-      "Processed 300/1749 images\n",
-      "Processed 400/1749 images\n",
-      "Processed 500/1749 images\n",
-      "Processed 600/1749 images\n",
-      "Processed 700/1749 images\n",
-      "Processed 800/1749 images\n",
-      "Processed 900/1749 images\n",
-      "Processed 1000/1749 images\n",
-      "Processed 1100/1749 images\n",
-      "Processed 1200/1749 images\n",
-      "Processed 1300/1749 images\n",
-      "Processed 1400/1749 images\n",
-      "Processed 1500/1749 images\n",
-      "Processed 1600/1749 images\n",
-      "Processed 1700/1749 images\n",
-      "Processed 1749/1749 images\n",
+      "Starting evaluation...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1749/1749 [02:17<00:00, 12.74image/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "Evaluation Results:\n",
-      "Precision: 1.0000\n",
-      "Recall: 0.8620\n",
-      "F1 Score: 0.9259\n"
+      "Precision: 0.9958\n",
+      "Recall: 0.8783\n",
+      "F1 Score: 0.9334\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -41,9 +52,9 @@
     "import supervision as sv\n",
     "import torch\n",
     "import cv2\n",
-    "import numpy as np\n",
     "import os\n",
     "from collections import Counter\n",
+    "from tqdm import tqdm\n",
     "\n",
     "model = YOLO('models/yolov8n_threat_detection.pt')\n",
     "\n",
@@ -92,7 +103,7 @@
     "    image_files = [f for f in os.listdir(images_path) if f.endswith(('.jpg', '.jpeg', '.png'))]\n",
     "    total_images = len(image_files)\n",
     "\n",
-    "    for i, img_file in enumerate(image_files):\n",
+    "    for i, img_file in tqdm(enumerate(image_files), total=total_images, unit=\"image\"):\n",
     "        img_path = os.path.join(images_path, img_file)\n",
     "        txt_file = os.path.splitext(img_file)[0] + '.txt'\n",
     "        txt_path = os.path.join(labels_path, txt_file)\n",
@@ -134,15 +145,11 @@
     "        except Exception as e:\n",
     "            print(f\"Error processing {img_file}: {str(e)}\")\n",
     "        \n",
-    "        if (i + 1) % 100 == 0 or (i + 1) == total_images:\n",
-    "            print(f\"Processed {i + 1}/{total_images} images\")\n",
-    "\n",
     "    if predictions and targets:\n",
     "        metrics = calculate_metrics(predictions, targets)\n",
     "    else:\n",
     "        print(\"Error: No valid predictions or ground truth found.\")\n",
     "        metrics = {\n",
-    "            'mAP@0.5': 0.0,\n",
     "            'Precision': 0.0,\n",
     "            'Recall': 0.0,\n",
     "            'F1 Score': 0.0\n",
@@ -158,6 +165,13 @@
     "for metric, value in results.items():\n",
     "    print(f\"{metric}: {value:.4f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
